--- a/Futbol/.project
+++ b/Futbol/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>agroalimentaria</name>
+	<name>Futbol</name>
 	<comment></comment>
 	<projects>
 	</projects>
