--- a/RETO HERENCIA-EMPRESA-BD/bin/.gitignore
+++ b/RETO HERENCIA-EMPRESA-BD/bin/.gitignore
@@ -1,2 +1,9 @@
+/.settings/
+/Directivo.class
+/EMPRESA.class
+/Empleados.class
 /GestorBD.class
+/Oficial.class
+/Operario.class
+/Tecnico.class
 /Vista.class
