--- a/REPASO Ejercicio Camping/.classpath
+++ b/REPASO Ejercicio Camping/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Usuario/Downloads/mysql-connector-java-8.0.15.jar/mysql-connector-java-8.0.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
