--- a/RETO HERENCIA-EMPRESA/bin/.gitignore
+++ b/RETO HERENCIA-EMPRESA/bin/.gitignore
@@ -1,1 +1,9 @@
+/Directivo.class
+/EMPRESA.class
+/Empleados.class
+/Gestionfichero.class
+/Oficial.class
+/Operario.class
+/Tecnico.class
+/Utilidades.class
 /escribirOperarioTest.class
